setup file changes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ if(BUILD_TESTING)
 endif()
 
 install(PROGRAMS
-        robot_localization/pf.py
+        robot_localization/particle_filter.py
         DESTINATION lib/${PROJECT_NAME})
 
 
